<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:tools="http://schemas.android.com/tools"
    android:layout_height="match_parent"
    android:layout_width="match_parent"
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:background="@color/colorPrimary"
    android:orientation="vertical">
    <TextView
        android:text="Welcome Back!"
        android:textColor="@color/colorText"
        android:layout_marginLeft="60dp"
        android:layout_marginTop="100dp"
        android:layout_height="70dp"
        android:textSize="40sp"
        android:layout_width="wrap_content"/>
    <TextView android:layout_height="40dp"
        android:layout_width="wrap_content"
        android:text="Login to continue"
        android:textColor="@color/colorText"
        android:layout_marginLeft="120dp"
        android:textSize="20sp"/>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:layout_marginTop="10dp"
        tools:ignore="UselessParent">


        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/textInputLayoutEmail"
            android:layout_width="300dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="50dp"
            android:textColorHint="@color/colorText"
            android:layout_marginTop="40dp"
            app:boxStrokeColor="@color/buttonColor"
           app:boxStrokeWidth="500dp"
            app:boxCornerRadiusTopStart="150dp"
            app:boxCornerRadiusTopEnd="150dp"
            app:boxCornerRadiusBottomStart="150dp"
            app:boxCornerRadiusBottomEnd="150dp"

           >

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/textInputEditTextEmail"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/hint_email"
                android:inputType="text"
                android:maxLines="1"
                android:textColor="@color/colorText" />
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/textInputLayoutPassword"
            android:layout_width="300dp"
            android:layout_height="wrap_content"
            android:textColorHint="@color/colorText"
            android:layout_marginTop="40dp"
            android:layout_marginStart="50dp"
            app:boxStrokeColor="@color/buttonColor"
            app:boxStrokeWidth="500dp"
            app:boxCornerRadiusTopStart="150dp"
            app:boxCornerRadiusTopEnd="150dp"
            app:boxCornerRadiusBottomStart="150dp"
            app:boxCornerRadiusBottomEnd="150dp"
           >

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/textInputEditTextPassword"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/hint_password"
                android:inputType="text"
                android:maxLines="1"
                android:textColor="@color/colorText" />

        </com.google.android.material.textfield.TextInputLayout>

        <Button  android:layout_width="300dp"
            android:layout_height="wrap_content"
            android:id="@+id/buttonLogin"
            android:layout_marginTop="40dp"
            android:layout_marginStart="50dp"
            android:textColor="@color/colorText"
            android:background="@drawable/rounded_button"
            android:text="@string/text_login"/>

        <TextView  android:id="@+id/textViewLinkRegister"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="30dp"
            android:gravity="center"
            android:text="@string/text_not_member"
            android:textSize="20sp"
            android:textColor="@color/colorAccent"/>
        <TextView  android:id="@+id/forgotPassword"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="40dp"
            android:gravity="center"
            android:text="Forgot password?"
            android:textSize="18sp"
            android:textColor="@color/colorAccent"
            tools:ignore="HardcodedText" />


    </LinearLayout>



</LinearLayout>
